# rampcon

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
src/colorgen/: mod.rs  model.rs  palette_models.rs
src/expr/: parse.rs
src/ui/: base_theme.rs  button.rs  egui.rs  field.rs  mod.rs  text.rs  text_input.rs  title.rs
