[package]
name = "bevy_ramp_con"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
evalexpr = { version = "11.2.0" }
anyhow = { version = "1.0.75" }
ropey = { version = "1.6.1" }
palette = { version = "0.7.3" }
bevy_egui = { version = "0.24" }
bevy-trait-query = { version = "0.4.0" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
